--- a/workflow-laravel-mix-6-2/src/index.html
+++ b/workflow-laravel-mix-6-2/src/index.html
@@ -9,15 +9,32 @@
   <!-- Meta Partage -->
   <!-- Favicon -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="stylesheet" href="https://use.typekit.net/azx2wqu.css">
   <link rel="stylesheet" href="styles/app.css">
 
   <script src="scripts/app.js" defer></script>
 </head>
 <body>
 
-  <img src="assets/images/logo-heaj.png">
-  <h1>Hello Hello Hello</h1>
+    <section class="section section__header">
+        <div>
+          <h1>Arthur</h1>
+          <p>Arthur</p>
+        </div>
+
+        <div class="img img__header"></div>
+
+        <div>
+          <div class="elgraphique__header"></div>
+          <p>Web Desi<span>g</span>ner
+          </p>
+        </div>
+
+        <div>
+          <p>Frontend  -Backend</p>
+          <div class="elgraphique__header"></div>
+        </div>
+    </section>
 
 </body>
 </html>
