--- a/workflow-laravel-mix-6-2/src/index.html
+++ b/workflow-laravel-mix-6-2/src/index.html
@@ -10,6 +10,13 @@
   <!-- Favicon -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://use.typekit.net/azx2wqu.css">
+
+  <link rel="stylesheet" href="https://use.typekit.net/azx2wqu.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mr+Bedfort&family=Mr+Dafoe&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="styles/app.css">
 
   <script src="scripts/app.js" defer></script>
@@ -17,21 +24,21 @@
 <body>
 
     <section class="section section__header">
-        <div>
+        <div class="title__P">
           <h1>Arthur</h1>
-          <p>Arthur</p>
+          <p class="typo__crb arthur">Arthur</p>
         </div>
 
         <div class="img img__header"></div>
 
-        <div>
+        <div class="element__header">
           <div class="elgraphique__header"></div>
           <p>Web Desi<span>g</span>ner
           </p>
         </div>
 
-        <div>
-          <p>Frontend  -Backend</p>
+        <div class="element__header --02">
+          <p>Frontend –Backend</p>
           <div class="elgraphique__header"></div>
         </div>
     </section>
