--- a/workflow-laravel-mix-6-2/src/index.html
+++ b/workflow-laravel-mix-6-2/src/index.html
@@ -37,10 +37,48 @@
           </p>
         </div>
 
-        <div class="element__header --02">
+        <div class="element__header element__header_02">
           <p>Frontend –Backend</p>
           <div class="elgraphique__header"></div>
         </div>
+    </section>
+
+    <section class="section section__perso">
+
+    </section>
+
+    <section class="section section__projets">
+      <ul>
+        <div class="elgraphique__big"></div>
+        <a href="">
+          <li>
+            <h3>Janus</h3>
+            <p class="typo__crb">Janus</p>
+          </li>
+        </a>
+        <div class="elgraphique__big"></div>
+        <a href="">
+          <li>
+            <h3>Prux.25</h3>
+            <p class="typo__crb">Prux.25</p>
+          </li>
+        </a>
+        <div class="elgraphique__big"></div>
+        <a href="">
+          <li>
+            <h3>Data.Play</h3>
+            <p class="typo__crb">Data.Play</p>
+          </li>
+        </a>
+        <div class="elgraphique__big"></div>
+        <a href="">
+          <li>
+            <h3>Design.F</h3>
+            <p class="typo__crb">Design Fiction</p>
+          </li>
+        </a>
+        <div class="elgraphique__big"></div>
+      </ul>
     </section>
 
 </body>
