--- a/workflow-laravel-mix-6-2/src/index.html
+++ b/workflow-laravel-mix-6-2/src/index.html
@@ -9,103 +9,86 @@
   <!-- Meta Partage -->
   <!-- Favicon -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--  Font  -->
+    <!--Futura-->
   <link rel="stylesheet" href="https://use.typekit.net/azx2wqu.css">
-
+    <!--8-->
   <link rel="stylesheet" href="https://use.typekit.net/azx2wqu.css">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mr+Bedfort&family=Mr+Dafoe&display=swap" rel="stylesheet">
-
+  <!--CSS-->
   <link rel="stylesheet" href="styles/app.css">
-
+  <!--JS-->
   <script src="scripts/app.js" defer></script>
 </head>
 <body>
 
-  <section class="section section__fond">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-  </section>
+  <div class="element__graphique__fond"></div>
 
-
-  <header>
-    <section class="section section__header">
-      <div class="title__P">
-        <h1>Arthur</h1>
-        <p class="typo__crb arthur">Arthur</p>
+  <header class="section section__header">
+    <div class="section__header_prt1">
+      <div>
+        <h1 class="eight">Arthur</h1>
       </div>
-
-      <div class="img img__header"></div>
-
-      <div class="element__header">
-        <div class="elgraphique__header"></div>
-        <p>Web Desi<span>g</span>ner
-        </p>
+      <div>
+        <h2 class="eight">Halbart</h2>
       </div>
-
-      <div class="element__header element__header_02">
-        <p>Frontend –Backend</p>
-        <div class="elgraphique__header"></div>
+      <div class="section__header_p">
+        <p>designer passionné <span class="eight">par</span> la création d'expériences <span class="eight">visuelles.</span></p>
       </div>
-  </section>
+      <div class="element__graph"></div>
+    </div>
+
+    <div class="section__header_prt2">
+      <div class="div__h3">
+        <h3>Web Desi<span class="eight">g</span>ner</h3>
+      </div>
+      <div>
+        <p>Frontend —Backend</p>
+      </div>
+    </div>
   </header>
 
   <main>
-    <section class="section section__perso">
-      <div>
-        <p>Je m'appelle Arthur Halbart, web designer passionné par la création d'expériences visuelles. Créatif et calme, j’adapte mon style à chaque projet.</p>
-
-        <div class="svg">
-          <svg fill="none" height="690" viewBox="0 0 255 690" width="255" xmlns="http://www.w3.org/2000/svg"><path d="m157.896 260.456c-.912 2.736-1.368 4.56-1.368 5.472 0 15.504 22.8 26.448 68.4 32.832 15.96 1.824 31.92 2.736 47.88 2.736h12.996c14.136 0 23.712 1.368 28.728 4.104 5.472 2.28 8.208 8.664 8.208 19.152 0 16.872-6.84 25.308-20.52 25.308l-38.304-2.052c-20.52 0-49.248 2.964-86.184 8.892-36.48 5.928-71.592 14.82-105.3358 26.676-33.744 11.856-50.616 24.852-50.616 38.988 0 13.68 23.94 29.184 71.82 46.512 47.8798 17.328 95.5318 25.992 142.9558 25.992 47.88 0 90.516-4.332 127.908-12.996 37.848-9.12 65.664-18.012 83.448-26.676s26.676-14.592 26.676-17.784-8.892-4.788-26.676-4.788-40.584 2.28-68.4 6.84c-27.36 4.56-44.004 7.98-49.932 10.26-5.472 2.28-9.576 3.42-12.312 3.42-2.28 0-3.648 0-4.104 0 0-.456-.228-1.824-.684-4.104 23.256-19.608 49.248-34.428 77.976-44.46 29.184-10.488 52.44-15.732 69.768-15.732 31.008 0 46.512 16.188 46.512 48.564 0 20.52-8.892 38.988-26.676 55.404-17.328 15.96-40.128 28.728-68.4 38.304-57.456 18.696-119.244 28.044-185.364 28.044h-17.1c-43.776 60.648-72.276 101.688-85.5 123.12-.912 5.016-3.648 7.524-8.208 7.524s-9.348-4.332-14.364-12.996c-4.5598-8.664-6.8398-18.24-6.8398-28.728 0-20.064 16.8718-51.756 50.6158-95.076-52.8958-8.664-90.2878-24.396-112.1758-47.196-21.432-22.8-32.148028-44.688-32.148028-65.664s5.243998-38.532 15.732028-52.668c10.944-14.592 23.94-25.992 38.988-34.2 15.504-8.208 30.78-15.048 45.8278-20.52 15.504-5.472 28.5-9.576 38.988-12.312 10.944-3.192 16.416-5.244 16.416-6.156l-1.368-4.104c-15.504-16.416-23.256-31.464-23.256-45.144 0-14.136 3.192-27.816 9.576-41.04 15.96-32.376 44.232-56.772 84.816-73.188 40.584-16.872 84.816-27.132 132.696-30.78 58.368-59.28 102.144-97.812 131.328-115.59596 3.648-2.73602 7.068-4.104029 10.26-4.104029s5.7.911999 7.524 2.736009c10.032 7.29598 15.048 12.08398 15.048 14.36398 0 1.824-.684 3.42-2.052 4.788-38.76 38.304-69.996 70.68-93.708 97.128 57.456 4.56 86.184 25.992 86.184 64.296 0 5.472-.456 11.4-1.368 17.784-.912 0-2.736-1.596-5.472-4.788-11.856-12.312-43.092-18.468-93.708-18.468-50.16 0-102.6 8.436-157.32 25.308-54.72 16.416-87.324 35.34-97.812 56.772z" fill="#95c3ea" fill-opacity=".5"/></svg>
-        </div>
-
-      </div>
+    <section class="section section__presentation">
+      <div><img class="img__presentation" src="assets/images/img_header_portfolio 1.webp" alt=""></div>
+      <div class="presentation__text"></div>
     </section>
 
     <section class="section section__projets">
-      <ul>
-        <div class="elgraphique__big"></div>
-        <a href="">
-          <li>
-            <h3>Janus</h3>
-            <p class="typo__crb">Janus</p>
-          </li>
-        </a>
-        <div class="elgraphique__big"></div>
-        <a href="">
-          <li>
-            <h3>Prux.25</h3>
-            <p class="typo__crb">Prux.25</p>
-          </li>
-        </a>
-        <div class="elgraphique__big"></div>
-        <a href="">
-          <li>
-            <h3>Data.Play</h3>
-            <p class="typo__crb">Data.Play</p>
-          </li>
-        </a>
-        <div class="elgraphique__big"></div>
-        <a href="">
-          <li>
-            <h3>Design.F</h3>
-            <p class="typo__crb">Design Fiction</p>
-          </li>
-        </a>
-        <div class="elgraphique__big"></div>
-      </ul>
-    </section>
+      <div>
+        <h3 class="eight">Les projets</h3>
+      </div>
 
+      <div>
+        <div><p>Janus</p></div>
+        <div>
+          <p>Rôle : UX/UI/Dev</p>
+        </div>
+      </div>
+
+      <div>
+        <div><p>PRUX —25</p></div>
+        <div>
+          <p>Rôle : UX/UI/Dev</p>
+        </div>
+      </div>
+
+      <div>
+        <div><p>Data-Play</p></div>
+        <div>
+          <p>Rôle : UX/UI/Dev</p>
+        </div>
+      </div>
+
+      <div>
+        <div><p>Design Fiction</p></div>
+        <div>
+          <p>Rôle : UX/UI/Dev</p>
+        </div>
+      </div>
+    </section>
   </main>
 
-    <footer class="section section__footer">
-
-    </footer>
+  <footer class="section section__footer"></footer>
 
 </body>
 </html>
