Avancement page home

--- a/workflow-laravel-mix-6-2/src/index.html
+++ b/workflow-laravel-mix-6-2/src/index.html
@@ -21,7 +21,8 @@
 </head>
 <body>
 
-  <div class="element__graphique__fond"></div>
+  <div class="fond element__graphique__fond_fixe"></div>
+  <div class="fond element__graphique__fond"></div>
 
   <header class="section section__header">
     <div class="section__header_prt1">
@@ -58,33 +59,45 @@
         <h3 class="eight">Les projets</h3>
       </div>
 
-      <div>
+      <a class="button">
         <div><p>Janus</p></div>
-        <div>
+        <div class="section__projets__role">
           <p>Rôle : UX/UI/Dev</p>
+          <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
+            </svg>
         </div>
-      </div>
+      </a>
 
-      <div>
+      <a class="button2">
         <div><p>PRUX —25</p></div>
-        <div>
+        <div class="section__projets__role">
           <p>Rôle : UX/UI/Dev</p>
+          <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
+            </svg>
         </div>
-      </div>
+      </a>
 
-      <div>
+      <a class="button3">
         <div><p>Data-Play</p></div>
-        <div>
+        <div class="section__projets__role">
           <p>Rôle : UX/UI/Dev</p>
+          <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
+            </svg>
         </div>
-      </div>
+      </a>
 
-      <div>
+      <a class="button4">
         <div><p>Design Fiction</p></div>
-        <div>
+        <div class="section__projets__role">
           <p>Rôle : UX/UI/Dev</p>
+          <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
+            </svg>
         </div>
-      </div>
+      </a>
     </section>
   </main>
 
