Avancement section:Projets/Contact/footer

--- a/workflow-laravel-mix-6-2/src/index.html
+++ b/workflow-laravel-mix-6-2/src/index.html
@@ -1,107 +1,141 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Portfolio</title>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <title>Portfolio</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <meta name="description" content="">
-  <!-- Meta Partage -->
-  <!-- Favicon -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--  Font  -->
-    <!--Futura-->
-  <link rel="stylesheet" href="https://use.typekit.net/azx2wqu.css">
-    <!--8-->
-  <link rel="stylesheet" href="https://use.typekit.net/azx2wqu.css">
-  <!--CSS-->
-  <link rel="stylesheet" href="styles/app.css">
-  <!--JS-->
-  <script src="scripts/app.js" defer></script>
-</head>
-<body>
+    <meta name="description" content="">
+    <!-- Meta Partage -->
+    <!-- Favicon -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--  Font  -->
+      <!--Futura-->
+    <link rel="stylesheet" href="https://use.typekit.net/azx2wqu.css">
+      <!--8-->
+    <link rel="stylesheet" href="https://use.typekit.net/azx2wqu.css">
+    <!--CSS-->
+    <link rel="stylesheet" href="styles/app.css">
+    <!--JS-->
+    <script src="scripts/app.js" defer></script>
+  </head>
+  <body>
 
-  <div class="fond element__graphique__fond_fixe"></div>
-  <div class="fond element__graphique__fond"></div>
+    <div class="fond element__graphique__fond_fixe"></div>
+    <div class="fond element__graphique__fond"></div>
 
-  <header class="section section__header">
-    <div class="section__header_prt1">
-      <div>
-        <h1 class="eight">Arthur</h1>
-      </div>
-      <div>
-        <h2 class="eight">Halbart</h2>
-      </div>
-      <div class="section__header_p">
-        <p>designer passionné <span class="eight">par</span> la création d'expériences <span class="eight">visuelles.</span></p>
-      </div>
-      <div class="element__graph"></div>
-    </div>
-
-    <div class="section__header_prt2">
-      <div class="div__h3">
-        <h3>Web Desi<span class="eight">g</span>ner</h3>
-      </div>
-      <div>
-        <p>Frontend —Backend</p>
-      </div>
-    </div>
-  </header>
-
-  <main>
-    <section class="section section__presentation">
-      <div><img class="img__presentation" src="assets/images/img_header_portfolio 1.webp" alt=""></div>
-      <div class="presentation__text"></div>
-    </section>
-
-    <section class="section section__projets">
-      <div>
-        <h3 class="eight">Les projets</h3>
-      </div>
-
-      <a class="button">
-        <div><p>Janus</p></div>
-        <div class="section__projets__role">
-          <p>Rôle : UX/UI/Dev</p>
-          <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
-            </svg>
+    <header class="section section__header">
+      <div class="section__header_prt1">
+        <div>
+          <h1 class="eight">Arthur</h1>
         </div>
-      </a>
-
-      <a class="button2">
-        <div><p>PRUX —25</p></div>
-        <div class="section__projets__role">
-          <p>Rôle : UX/UI/Dev</p>
-          <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
-            </svg>
+        <div>
+          <h2 class="eight">Halbart</h2>
         </div>
-      </a>
-
-      <a class="button3">
-        <div><p>Data-Play</p></div>
-        <div class="section__projets__role">
-          <p>Rôle : UX/UI/Dev</p>
-          <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
-            </svg>
+        <div class="section__header_p">
+          <p>designer passionné <span class="eight">par</span> la création d'expériences <span class="eight">visuelles.</span></p>
         </div>
-      </a>
+        <div class="element__graph"></div>
+      </div>
 
-      <a class="button4">
-        <div><p>Design Fiction</p></div>
-        <div class="section__projets__role">
-          <p>Rôle : UX/UI/Dev</p>
-          <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
-            </svg>
+      <div class="section__header_prt2">
+        <div class="div__h3">
+          <h3>Web Desi<span class="eight">g</span>ner</h3>
         </div>
-      </a>
-    </section>
-  </main>
+        <div>
+          <p>Frontend —Backend</p>
+        </div>
+      </div>
+    </header>
 
-  <footer class="section section__footer"></footer>
+    <main>
+      <section class="section section__presentation">
+        <div><img class="img__presentation" src="assets/images/img_header_portfolio 1.webp" alt=""></div>
+        <div class="presentation__text"></div>
+      </section>
 
-</body>
+      <section class="section section__projets">
+        <div>
+          <h3 class="eight">Les projets</h3>
+        </div>
+
+        <a href="" class="button">
+          <div class="txt__gras"><p>Janus</p></div>
+          <div class="section__projets__role">
+            <p>Rôle : UX/UI/Dev</p>
+            <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
+              </svg>
+          </div>
+        </a>
+
+        <a href="" class="button2">
+          <div class="txt__gras"><p>PRUX —25</p></div>
+          <div class="section__projets__role">
+            <p>Rôle : UX/UI/Dev</p>
+            <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
+              </svg>
+          </div>
+        </a>
+
+        <a href="" class="button3">
+          <div class="txt__gras"><p>Data-Play</p></div>
+          <div class="section__projets__role">
+            <p>Rôle : UX/UI/Dev</p>
+            <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
+              </svg>
+          </div>
+        </a>
+
+        <a href="" class="button4">
+          <div class="txt__gras"><p>Design Fiction</p></div>
+          <div class="section__projets__role">
+            <p>Rôle : UX/UI/Dev</p>
+            <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M21.9366 0.495308L23.8799 2.44047L13.2887 13.0353C13.119 13.2061 12.9172 13.3416 12.6949 13.4341C12.4726 13.5266 12.2342 13.5742 11.9935 13.5742C11.7527 13.5742 11.5143 13.5266 11.292 13.4341C11.0697 13.3416 10.8679 13.2061 10.6982 13.0353L0.101563 2.44047L2.0449 0.49714L11.9907 10.4411L21.9366 0.495308Z" fill="black"/>
+              </svg>
+          </div>
+        </a>
+      </section>
+
+      <section class="section section__contact">
+        <h3 class="eight">Conctacts</h3>
+        <div>
+          <p class="txt__gras">Email</p>
+          <p>arthur.halbart@gmail.com</p>
+        </div>
+        <div>
+          <p class="txt__gras">Numéro</p>
+          <p>+32.472.77.69.98</p>
+        </div>
+      </section>
+    </main>
+
+    <footer class="section section__footer">
+      <div class="logo_secondaire"></div>
+      <div class="sous__nav">
+        <ul>
+          <a href="">
+            <li>
+              <p>à propos</p>
+            </li>
+          </a>
+          <a href="">
+            <li>
+              <p>Projets</p>
+            </li>
+          </a>
+          <a href="">
+            <li>
+              <p>Crédits</p>
+            </li>
+          </a>
+        </ul>
+      </div>
+      <div class="copyright"></div>
+    </footer>
+
+  </body>
 </html>
