Page Case Study

--- a/workflow-laravel-mix-6-2/src/index.html
+++ b/workflow-laravel-mix-6-2/src/index.html
@@ -69,7 +69,7 @@
           </div>
         </a>
 
-        <a href="" class="button2">
+        <a target="_blank" href="caseStudy__prux.html" class="button2">
           <div class="txt__gras"><p>PRUX —25</p></div>
           <div class="section__projets__role">
             <p>Rôle : UX/UI/Dev</p>
