Avancement CS suit

--- a/workflow-laravel-mix-6-2/src/caseStudy__Janus.html
+++ b/workflow-laravel-mix-6-2/src/caseStudy__Janus.html
@@ -22,13 +22,13 @@
   <body>
     <canvas id="noiseCanvas"></canvas>
 
-    <div class="fond fond__prux element__graphique__fond_fixe"></div>
-    <div class="fond fond__prux element__graphique__fond"></div>
+    <div class="fond fond__janus element__graphique__fond_fixe"></div>
+    <div class="fond fond__janus element__graphique__fond"></div>
 
     <header class="section section__header section__header__CS">
         <section>
             <div>
-              <h1 class="eight">PRUX —25</h1>
+              <h1 class="eight">Janus</h1>
             </div>
             <div>
               <div class="prt2__header__CS">
