--- a/workflow-laravel-mix-6-2/src/index.html
+++ b/workflow-laravel-mix-6-2/src/index.html
@@ -21,6 +21,8 @@
   </head>
   <body>
 
+    <canvas id="noiseCanvas"></canvas>
+
     <div class="fond element__graphique__fond_fixe"></div>
     <div class="fond element__graphique__fond"></div>
 
@@ -42,7 +44,7 @@
         <div class="div__h3">
           <h3>Web Desi<span class="eight">g</span>ner</h3>
         </div>
-        <div>
+        <div class="div__p">
           <p>Frontend —Backend</p>
         </div>
       </div>
@@ -59,7 +61,7 @@
           <h3 class="eight">Les projets</h3>
         </div>
 
-        <a href="" class="button">
+        <a href="caseStudy__Janus.html" class="button">
           <div class="txt__gras"><p>Janus</p></div>
           <div class="section__projets__role">
             <p>Rôle : UX/UI/Dev</p>
@@ -69,7 +71,7 @@
           </div>
         </a>
 
-        <a target="_blank" href="caseStudy__prux.html" class="button2">
+        <a href="caseStudy__prux.html" class="button2">
           <div class="txt__gras"><p>PRUX —25</p></div>
           <div class="section__projets__role">
             <p>Rôle : UX/UI/Dev</p>
@@ -79,7 +81,7 @@
           </div>
         </a>
 
-        <a href="" class="button3">
+        <a href="caseStudy__DataPlay.html" class="button3">
           <div class="txt__gras"><p>Data-Play</p></div>
           <div class="section__projets__role">
             <p>Rôle : UX/UI/Dev</p>
@@ -89,7 +91,7 @@
           </div>
         </a>
 
-        <a href="" class="button4">
+        <a href="caseStudy__DesignFiction.html" class="button4">
           <div class="txt__gras"><p>Design Fiction</p></div>
           <div class="section__projets__role">
             <p>Rôle : UX/UI/Dev</p>
@@ -137,5 +139,9 @@
       <div class="copyright"></div>
     </footer>
 
+
+
+
+    
   </body>
 </html>
