--- a/workflow-laravel-mix-6-2/src/caseStudy__prux.html
+++ b/workflow-laravel-mix-6-2/src/caseStudy__prux.html
@@ -59,18 +59,18 @@
           <h3 class="eight">Prise de contact</h3>
         </div>
         <div class="txt__pC">
-          <div>
-            <p class="txt_big">Nous avons, à l'aide d'un sondage, relevé que la majorité des étudiants voulaient un endroit détente pour les heures de fourches où il est également possible de travailler dans le calme et le confort, comme ils le feraient chez eux. Malgré que la majorité des outils disponibles dans l’école soient numériques, les élèves soulignent un grand manque de prises accessibles pour brancher/recharger leurs appareils. </p>
+          <div class="conteneur_p">
+            <p>Nous avons, à l'aide d'un sondage, relevé que la majorité des étudiants voulaient un endroit détente pour les heures de fourches où il est également possible de travailler dans le calme et le confort, comme ils le feraient chez eux. Malgré que la majorité des outils disponibles dans l’école soient numériques, les élèves soulignent un grand manque de prises accessibles pour brancher/recharger leurs appareils. </p>
 
-            <p>Enfin, la plupart des ordinateurs ou autres appareils à disposition se trouvent dans les classes où les professeurs donnent cours, ce qui rend impossible l’accès libre au matériel pendant les heures creuses.</p>
+            <p class="txt_big">Enfin, la plupart des ordinateurs ou autres appareils à disposition se trouvent dans les classes où les professeurs donnent cours, ce qui rend impossible l’accès libre au matériel pendant les heures creuses.</p>
           </div>
 
           <div class="img__pC"></div>
         </div>
         <div class="petit_img__pC">
-          <div class="img__pC"></div>
-          <div class="img__pC"></div>
-          <div class="img__pC"></div>
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
       </section>
 
