Avancement page Case Study bis

--- a/workflow-laravel-mix-6-2/src/caseStudy__prux.html
+++ b/workflow-laravel-mix-6-2/src/caseStudy__prux.html
@@ -77,9 +77,9 @@
       <section class="section section__problèmeMajeurs">
         <div><h3 class="eight">Problèmes majeurs</h3></div>
 
-        <div><p>Tout d’abord, le A084 sert actuellement au Conseil Étudiants pour la livraison des Guido. Nous allons devoir négocier avec eux pour leur trouver un autre local pour pouvoir faire leur activité. </p></div>
+        <div class="txt_big"><p>Tout d’abord, le A084 sert actuellement au Conseil Étudiants pour la livraison des Guido. Nous allons devoir négocier avec eux pour leur trouver un autre local pour pouvoir faire leur activité. </p></div>
 
-        <div>
+        <div class="txt">
           <div>
             <p>Lors d’une visite du A083, nous avons constaté un manque de prises, rendant l’installation d’ordinateurs impossible sans refaire l’installation électrique du local. </p>
             <p>Nous avons également remarqué que la pièce résonne. Pour y remédier, nous avons pensé à mettre des mousses acoustiques sur les murs, afin d’insonoriser correctement le local. </p>
@@ -91,13 +91,13 @@
         </div>
       </section>
 
-      <section class="section section__premiersIdee">
+      <section class="section section__premieresIdees">
         <div><h3 class="eight">Premières idées</h3></div>
 
-        <div></div>
+        <div class="img__premieresIdees"><img src="" alt=""></div>
 
-        <div>
-          <p>Après avoir analysé la salle et ce qui se trouvait à notre disposition, nous avons réfléchi à ce que nous pourrions apporter de neuf à cette salle en fonction des demandes des étudiants. </p>
+        <div class="txt">
+          <p class="txt_g">Après avoir analysé la salle et ce qui se trouvait à notre disposition, nous avons réfléchi à ce que nous pourrions apporter de neuf à cette salle en fonction des demandes des étudiants. </p>
 
           <p>Plusieurs points revenaient de manière récurrente : le manque de décoration et de confort au sein de l’école. D’après les réponses obtenues suite à notre formulaire, il n’y a en effet, en dehors de la cafétéria (qui n’est pas vraiment un endroit “calme”), pratiquement pas de salle aménagée pour être au calme, loin du bruit extérieur. Que ce soit pour se détendre, ou pour travailler, cette salle était donc parfaite pour cela, car elle se situe dans une annexe du bâtiment principal.</p>
 
@@ -114,11 +114,11 @@
           <h3 class="eight">Mise en Commun</h3>
         </div>
 
-        <div>
-          <div>
+        <div class="bloc__txt">
+          <div class="txt">
             <p>Une fois que chaque groupe a fini ses recherches de problématiques et d’idées en découlant, nous avons ensuite mis en commun toutes nos idées afin de se répartir les tâches et assurer la cohérence du projet global. Chaque groupe a donc une tâche précise à réaliser : nous nous occuperons de la décoration murale, certains de la porte, d’autres de l’agencement des meubles, etc.</p>
           </div>
-          <div></div>
+          <div class="img__miseCommun"></div>
         </div>
       </section>
 
@@ -127,7 +127,7 @@
           <h4 class="eight">Approfondissement du projet</h4>
         </div>
 
-        <div>
+        <div class="txt">
           <p>Suite à cette mise en commun, nous nous sommes penché sur notre idée d’affiches. Nous avons décidé de partir sur une bâche à accrocher sur l’un des murs de la pièce grâce à des ficelles et des anneaux ancrés dans le mur. En premier lieu, nous voulions y insérer des travaux d’étudiants d’options différentes, un peu dans le même style que les posters/affiches/bâches des journées portes ouvertes de l’école. Le problème est qu’il faudrait l’autorisation de chaque étudiant pour pouvoir utiliser leurs travaux, ou bien demander directement aux professeurs de faire une sélection.</p>
 
           <p>Une autre solution, serait de remplacer la bâche par des néons, des leds, des plantes aux murs ou d’autres éléments moins présents dans les différents bâtiments de l’école afin de combler un peu cette impression de blanc/de vide/de connu. On utiliserait cette option si le timing devenait trop juste pour obtenir les travaux des élèves.</p>
